@@ -51,7 +51,7 @@ CL_SOCKET dnl for getservbyport et al
 AC_CHECK_FUNCS(clock confstr fcntl gethostent sysconf uname dnl
 getlogin getpwent getpwnam getpwuid endpwent setpwent dnl
 getservbyport getservbyname getservent setservent endservent dnl
-openlog setlogmask syslog closelog dnl
+openlog setlogmask syslog closelog strftime strptime mktime dnl
 getpgid setpgrp getsid setpgid setsid kill dnl
 getgrgid getgrnam getgrent endgrent setgrent dnl
 endutxent getutxent getutxid getutxline pututxline setutxent dnl
