@@ -1,5 +1,11 @@
 2005-11-18  Sam Steingold  <sds@gnu.org>
 
+	* modules/syscalls/calls.c (POSIX:STRING-TIME): implemented
+	* modules/syscalls/posix.lisp (STRING-TIME) [unix]: exported
+	* modules/syscalls/configure.in (strptime, strftime, mktime): check
+
+2005-11-18  Sam Steingold  <sds@gnu.org>
+
 	* modules/bindings/win32/win32.lisp (with-handle): declare the
 	HANDLE variable READ-ONLY
 	(MessageBoxA): new function
